Fix for mobile menu: bottom border not visible if collapsed

--- a/wp-content/themes/nt-2017-theme/style.css
+++ b/wp-content/themes/nt-2017-theme/style.css
@@ -728,6 +728,7 @@ a.more-link {
   left: 0;
   float: left;
   padding: 0;
+  margin-top: -1px;
   background-color: #bbcdee;
   width: 85%;
   border-right: solid 1px #36c;
